# gear_academy

./: .gitignore
Tamagotchi/: Cargo.toml  build.rs
Tamagotchi/io/: Cargo.toml
Tamagotchi/io/src/: lib.rs
Tamagotchi/src/: lib.rs
